Fixed Wallpaper
Still not responsive tho

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /*Style Added Soon!*/
 body {
 	background-image: url(jaihkdsv.png);
-	background-length: 100%;
-	background-width: 100;
+	background-size: 100%
 	}
